# hippo-memory

./: .gitattributes  .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  MEMORY_ENVELOPE.md  PLAN.md  README.md  RESEARCH.md  ROADMAP-RESEARCH.md  ROADMAP.md  TODOS.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.benchmarks.json  vitest.config.ts
aria-application/: budget.xlsx  team.csv  team.xlsx
benchmarks/: INIT_LAZY_DB.md  LOCOMO_INVESTIGATION.md  LONGMEMEVAL_RESOLVED.md  README.md
docs/: FRONTIER_EMBEDDER_BENCHMARK.md  RETRACTION.md  overnight-2026-05-24-wrap.md  release-policy.md  working-memory-roadmap.md
evals/: README.md  baseline-profile-bench.json  model-profile-bench.json  real-corpus.json  sweep-results.md
frontier-ai-application/: generate_q10_appendix.py  generate_q14_gantt.py  generate_q15_risks.py  generate_q9_appendix.py
integrations/: claude-code.md  codex.md  cursor.md  generic.md  openclaw.md
mockups/: amiga-workbench.html  archivist-terminal.html  art-consolidation-river.html  art-hippocampus-anime.html  (+22 more)
python/: .gitignore  README.md  pyproject.toml
python/examples/: 01_basic_remember_recall.py  02_context_injection.py  03_outcome_feedback.py
python/scripts/: capture_fixtures.py
python/src/hippo_memory/: __init__.py  client.py  models.py  sync_client.py
python/tests/: conftest.py  test_client.py  test_customer_notes.py  test_decisions.py  test_incidents.py  test_models.py  test_policies.py  test_predictions.py  test_processes.py  test_project_briefs.py  test_projected.py  test_skills.py  test_sync_client.py
(+882 files in other folders)
