[build-system]
requires = ["uv_build>=0.5.0,<0.11"]
build-backend = "uv_build"

[project]
name = "hippo-memory-sdk"
version = "0.2.0"
description = "Python SDK (async + sync) for hippo-memory (biologically-inspired memory for AI agents). Wraps the HTTP API of the hippo-memory npm package."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Kit", email = "skfsk27@gmail.com"}]
keywords = ["memory", "ai-agents", "rag", "hippo-memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Repository = "https://github.com/kitfunso/hippo-memory"
Issues = "https://github.com/kitfunso/hippo-memory/issues"
Changelog = "https://github.com/kitfunso/hippo-memory/blob/master/CHANGELOG.md"

[tool.uv.build-backend]
# Distribution name is hippo-memory-sdk (PyPI similarity blocker on hippo-memory),
# but the Python import name stays hippo_memory so user code is unchanged.
module-name = "hippo_memory"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
